# neyman-pearson-tests-repro

./: .gitignore  README.md  pyproject.toml
data/interim/: referenced_equations.csv
data/raw/: README.md  paper_ocr.txt
docs/: artifacts.md  formalization-roadmap.md  future-work.md  paper-objects.md  reproduction-guide.md  validation.md
outputs/tables/: critical_values.csv  figure_inventory.csv  geometry_checks.csv  power_values.csv
scripts/: make_figures.py  reproduce_examples.py  validate.py
src/np1933/: __init__.py  api.py  examples_composite.py  examples_geometry.py  examples_normal.py  figures.py  io.py  models.py  validation.py
tests/: test_equation_linkage.py  test_geometry_and_figures.py  test_numeric_examples.py  test_structural_outputs.py
