[project]
name = "np1933-repro"
version = "0.1.0"
description = "Deterministic analytic reproduction scaffold for Neyman-Pearson (1933)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "sympy",
  "matplotlib",
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/np1933"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
